--- a/paraga/paragaweb/WebContent/person.html
+++ b/paraga/paragaweb/WebContent/person.html
@@ -58,7 +58,12 @@
             fields: [
 				{ title:'A/A', name: "id", type: "text" , key:true, width: 10 },
                 { title:'Όνομα',name: "name", type: "text" , width: 50},
-                {
+                {title:'Επώνυμο',name: "surname", type: "text" , width: 50},
+                {title:'Ηλικία',name: "age", type: "text" , width: 50},
+                {title:'Διέυθυνση',name: "address", type: "text" , width: 50},
+                {title:'Πόντοι',name: "Points", type: "text" , width: 50},
+                { 
+                      
                     type: "control",
                     modeSwitchButton: false,
                     editButton: false,
@@ -99,7 +104,7 @@
 				 
 			</div>
 			<div>
-				<h2> Μάθηματα </h2>
+				<h2> Person</h2>
 			</div>
 			
 			
