--- a/askisisWeb/WebContent/css1.html
+++ b/askisisWeb/WebContent/css1.html
@@ -7,6 +7,7 @@
 <body>
 
 <h1> Αυτός είναι ένα τίτλος1 </h1>
+
 <h2> Αυτός είναι ένα υποτίτλος 1</h2>
 
 <h2> Αυτός είναι ένα υποτίτλος 2</h2>
@@ -15,14 +16,12 @@
 
 <h1> Αυτός είναι ένα τίτλος2 </h1>
 <h1> Αυτός είναι ένα τίτλος3 </h1>
-
-Να γίνει χρωματιστεί με κοκκινο χρώμα τα γράμματα των όλων των τίτλων εκτός από το 2(Αυτός είναι ένα τίτλος2).
+Να χρωματιστεί με κοκκινο χρώμα τα γράμματα όλων των τίτλων εκτός από το 2(Αυτός είναι ένα τίτλος2).
 
 Όλοι οι υποτίτλοι h2 να έχουν font Arial ή κάποιο generic και το μέγεθος τους να είναι 15px.(Εκτός από τον υποτίτλο 2)
 
-Στην html μπορούν να προστεθούν οποιαδήποτ attributes είναι απαραίτητα. 
-
-
+Στην html μπορούν να προστεθούν οποιαδήποτε attributes είναι απαραίτητα. 
 
 </body>
 </html>
+
