εχω δημιουργησει και το ExAjax12 kai 13

--- a/askisisWeb/WebContent/ExAjax1.html
+++ b/askisisWeb/WebContent/ExAjax1.html
@@ -11,10 +11,8 @@
 function callAjax(){
 	 
 	$.ajax({
-		url: "http://localhost/paraga/api/person/all",
-	    type: "GET",
-	    dataType: "json",
-	    contentType: "application/json"
+		url: "http://localhost:8080/paraga/api/person/all",
+	    type: "GET"
 	})
 }
 
