--- a/askisisWeb/WebContent/WEB-INF/Abaluben.html
+++ b/askisisWeb/WebContent/WEB-INF/Abaluben.html
@@ -70,8 +70,8 @@ form {
       </div><br><br><br>
 	  
 	  <iframe width="560" height="315"
-      src="https://www.youtube.com/embed/watch?v=FhqHVBG7SsQ">
-      </iframe><br>
+      src="https://www.youtube.com/embed/FhqHVBG7SsQ">
+      </iframe>
 	  <p>Το πιο όμορφο Video της εβδομάδας by www.luben.gr</p>
 	  
 
